--- a/server/build.gradle
+++ b/server/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 			implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 			implementation 'org.springframework.boot:spring-boot-starter-mail'
+			
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	
 	runtimeOnly 'com.h2database:h2'
 }
