--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.11",
-    "@mui/styles": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.24.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,6 +22,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "react-tooltip": "^5.26.3",
     "web-vitals": "^2.1.4"
   },
